2017.8.19，1.3.0，解决配速不出来现象，多语言适配